{
  "sourceLanguage" : "en",
  "strings" : {
    "\"%@\"" : {

    },
    "%llu %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$llu %2$@"
          }
        }
      }
    },
    "Add a Medication" : {

    },
    "Add a time" : {

    },
    "Add Medication" : {

    },
    "Add New Medication" : {

    },
    "As Needed" : {

    },
    "Cancel" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "Change" : {

    },
    "Close" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "Delete" : {

    },
    "Discard Changes" : {

    },
    "Done" : {

    },
    "Dosage" : {

    },
    "Dosage Picker" : {

    },
    "Every %lld days" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "variations" : {
            "plural" : {
              "one" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "Every day"
                }
              },
              "other" : {
                "stringUnit" : {
                  "state" : "new",
                  "value" : "Every %lld days"
                }
              }
            }
          }
        }
      }
    },
    "Every %lld Days" : {

    },
    "Every Day" : {

    },
    "Every Few Days" : {

    },
    "Every Other Day" : {

    },
    "Every other day, Every 3 days" : {

    },
    "Frequency" : {

    },
    "Hello World" : {

    },
    "Interval" : {

    },
    "Medication Schedule" : {

    },
    "Medication Settings" : {

    },
    "Medication with this dosage already exists." : {

    },
    "Not implmented " : {

    },
    "On Mondays, On Weekdays" : {

    },
    "On Specific Days of the Week" : {

    },
    "Quantity" : {

    },
    "Save Dosage" : {

    },
    "Save Medications" : {

    },
    "Schedule" : {

    },
    "Schedule Options" : {

    },
    "Schedule Times" : {

    },
    "Search for a medication" : {

    },
    "Set a Schedule" : {

    },
    "Use the \"+\" button at the top to add all the medications you take." : {

    },
    "When will you take this?" : {

    },
    "You are about to leave the medication settings view without saving your settings." : {

    }
  },
  "version" : "1.0"
}